FIX: Layout for contributors and readers.
Issue #85 was solved thanks to a (flex) layout. Introduced only for memos, this refactoring had side effects on diagrams, tables and graphs. This commit fixes these layout issues.

This commit also includes :
* a fix preventing the diagram page to constantly reload. This code is inspired by @benel commit a2820fac00b2ea16318c915cf360ed0f7cfe855a related to #94.
* the diary view (that was missing from previous commits).

--- a/app/_attachments/diagram.css
+++ b/app/_attachments/diagram.css
@@ -1,4 +1,5 @@
 #graph {
+  order: 2;
   margin-left: 10px;
   margin-right: 10px;
   height: 500px;
@@ -6,6 +7,7 @@
 }
 
 #diagram {
+  order: 2;
   position:relative;
   left: 0;
   right:0;
